<!--
  ~ Copyright (c) 2015. Sideez Inc.
  -->

<resources>
    <string name="app_name">Stormy</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_dialog_title">Oops! Sorry!</string>
    <string name="error_dialog_msg">There was an error. Please try again!</string>
    <string name="error_dialog_button">OK</string>
    <string name="network_error_msg">Network is unavailable</string>
    <string name="label_placeholder">...</string>
    <string name="value_placeholder">--</string>
    <string name="refresh_msg">Getting current weather…</string>
    <string name="location_label">Los Angeles, CA</string>
    <string name="humidity_label">Humidity</string>
    <string name="precip_label">Rain/Snow?</string>
    <string name="degree_icon_des">Degree icon</string>
    <string name="weather_icon_des">Weather Icon</string>
    <string name="refresh_btn_des">Refresh Image</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_forecast">There is no data to display</string>
    <string name="this_week_label">This Week\'s Weather</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
</resources>
